# Mutil

./: pyproject.toml  requirements.txt
mutil/: __init__.py
mutil/ops/: __init__.py  normalization.py
ops/: normalization.py
